# arbor

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  PHILOSOPHY.md  README.md  RELEASE_v1.8.0.1_COMPLETE.md  RELEASE_v1.8.0.1_HOTFIX.md  action.yml  auto-complete-release.ps1  docker-compose.yml
.github/: CONTRIBUTING.md  FUNDING.yml  PR_DESCRIPTION.md  SECURITY.md  copilot-instructions.md
.github/workflows/: arbor-action-smoke.yml  arbor-pr-bot.yml  contributors.yml  flutter.yml  ghcr.yml  mcp-integration-validate.yml  mcp-release-adoption.yml  npm-publish.yml  release.yml  rust.yml  set-topics.yml  vscode-marketplace.yml  vscode-publish.yml
crates/arbor-cli/: Cargo.toml  README.md
crates/arbor-cli/src/: commands.rs  main.rs
crates/arbor-cli/tests/: diff_command_integration.rs
crates/arbor-core/: README.md
crates/arbor-core/src/: asasa.rs  fallback_parser.rs  lib.rs  node.rs  parser.rs  parser_v2.rs
crates/arbor-graph/: Cargo.toml
crates/arbor-graph/src/: confidence.rs  graph.rs  heuristics.rs  slice.rs  store.rs
crates/arbor-gui/: Cargo.toml
crates/arbor-mcp/: Cargo.toml  README.md
crates/arbor-mcp/src/: lib.rs
crates/arbor-server/: Cargo.toml
crates/arbor-watcher/: Cargo.toml  README.md
docs/: 1.9log.md  ADDING_LANGUAGES.md  ARCHITECTURE.md  INSTALL.md  MCP_INTEGRATION.md  PROTOCOL.md  QUICKSTART.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.6.2.md  RELEASE_NOTES_v1.8.0.md  RELEASING.md  ROADMAP.md  TOPICS.md
extensions/arbor-vscode/: package-lock.json  package.json
packaging/homebrew/: arbor.rb
packaging/npm/: package.json
packaging/scoop/: arbor.json
scripts/: clean.ps1  clean.sh  update_contributors.ps1
scripts/release/: auto-complete-release.ps1
visualizer/lib/: main.dart
(+15 files in other folders)
