[package]
name = "arbor-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol server for Arbor"
repository = "https://github.com/Anandb71/arbor"
homepage = "https://github.com/Anandb71/arbor"
documentation = "https://github.com/Anandb71/arbor/blob/main/docs/MCP_INTEGRATION.md"
readme = "README.md"
keywords = ["mcp", "model-context-protocol", "code-analysis", "graph", "ai"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow = "1.0"
async-trait = "0.1"

arbor-core = { path = "../arbor-core", version = "1.6.3" }
arbor-graph = { path = "../arbor-graph", version = "1.6.3" }
arbor-server = { path = "../arbor-server", version = "1.6.3" }
