[package]
name = "arbor-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol server for Arbor"
repository = "https://github.com/Anandb71/arbor"
homepage = "https://github.com/Anandb71/arbor"
documentation = "https://github.com/Anandb71/arbor/blob/main/docs/MCP_INTEGRATION.md"
readme = "README.md"
keywords = ["mcp", "code-analysis", "graph", "ai"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow = "1.0"
async-trait = "0.1"

arbor-core = { path = "../arbor-core", version = "2.0.0" }
arbor-graph = { path = "../arbor-graph", version = "2.0.0" }
arbor-server = { path = "../arbor-server", version = "2.0.0" }
